simple_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo
spec:
  containers:
    - name: echo
      image: registry.cluster.wik.cloud/public/echo
      ports:
        - containerPort: 8080
