simple_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deploy
  labels:
    app: echo
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  selector:
    app: echo
  ports:
    - name: echo
      protocol: TCP
      port: 8080
      targetPort: 8080
